--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -23,7 +23,7 @@
         android:id="@+id/edt"
         android:layout_width="162dp"
         android:layout_height="27dp"
-        android:layout_marginTop="115dp"
+        android:layout_marginTop="132dp"
         android:layout_marginEnd="4dp"
         android:ems="10"
         android:inputType="textPassword"
@@ -36,7 +36,7 @@
         android:id="@+id/edt2"
         android:layout_width="157dp"
         android:layout_height="28dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="76dp"
         android:layout_marginEnd="3dp"
         android:ems="10"
         android:inputType="textPassword"
@@ -47,8 +47,8 @@
 
     <TextView
         android:id="@+id/Un2"
-        android:layout_width="85dp"
-        android:layout_height="31dp"
+        android:layout_width="92dp"
+        android:layout_height="38dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="7dp"
         android:text="User Name"
@@ -88,10 +88,11 @@
         android:id="@+id/FG"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="117dp"
+        android:layout_marginStart="120dp"
         android:text="Forgot your password?"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.551"
         tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
