--- a/app/src/main/res/layout/activity_tasksactivity.xml
+++ b/app/src/main/res/layout/activity_tasksactivity.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF8F8">
 
-    <!-- المحتوى الرئيسي للشاشة -->
+    <!-- المحتوى الداخلي -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="24dp">
 
-        <!-- السطر العلوي: رجوع + العنوان -->
+        <!-- السطر العلوي: رجوع + عنوان -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,28 +26,14 @@
                 android:src="@drawable/ic_back"
                 android:layout_marginEnd="12dp" />
 
-            <!-- زر زائد لإضافة مهمة جديدة -->
             <TextView
                 android:id="@+id/tv_title"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Let's get some tasks done!"
                 android:textColor="#333333"
                 android:textSize="20sp"
                 android:textStyle="bold" />
-
-            <ImageButton
-                android:id="@+id/btn_add_task"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@drawable/ic_add"
-                android:background="@drawable/round_pink_button"
-                android:layout_gravity="end"
-                android:contentDescription="Add Task"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="12dp"/>
-
-
         </LinearLayout>
 
         <!-- خط فاصل -->
@@ -77,7 +64,7 @@
 
     </LinearLayout>
 
-    <!-- زر إضافة مهمة جديدة -->
+    <!-- زر زائد عائم -->
     <ImageButton
         android:id="@+id/btn_add_task"
         android:layout_width="60dp"
@@ -88,5 +75,5 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="24dp"
         android:contentDescription="Add Task" />
-</FrameLayout>
 
+</FrameLayout>
