--- a/app/src/main/res/layout/add_asigment.xml
+++ b/app/src/main/res/layout/add_asigment.xml
@@ -36,7 +36,7 @@
             android:hint="Importance Level (1-5)">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edit_text_importance"
+                android:id="@+id/etImprtance"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
@@ -52,7 +52,7 @@
             android:hint="Workload Size (1-10)">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edit_text_workload_size"
+                android:id="@+id/etWorkLoad"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
