--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -79,10 +79,11 @@
         android:layout_marginBottom="19dp"
         android:onClick="onClickGo22"
         android:text="Enter"
-        android:textColorLink="#FF86AF"
+        android:backgroundTint="#FFE0E0"
         app:layout_constraintBottom_toTopOf="@+id/FG"
         app:layout_constraintEnd_toEndOf="@+id/FG"
         tools:ignore="MissingConstraints" />
+
 
     <TextView
         android:id="@+id/FG"
