--- a/app/src/main/res/layout/activity_tasksactivity.xml
+++ b/app/src/main/res/layout/activity_tasksactivity.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/btn_back"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/ic_back"
+                android:src="@drawable/ic_launcher_foreground"
                 android:layout_marginEnd="12dp" />
 
             <TextView
