fixed befor save via AppDataBased

--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -21,8 +21,8 @@
 
     <EditText
         android:id="@+id/etUserNmaeEmail"
-        android:layout_width="162dp"
-        android:layout_height="27dp"
+        android:layout_width="283dp"
+        android:layout_height="67dp"
         android:layout_marginTop="132dp"
         android:layout_marginEnd="4dp"
         android:ems="10"
@@ -34,8 +34,8 @@
 
     <EditText
         android:id="@+id/etPassword"
-        android:layout_width="157dp"
-        android:layout_height="28dp"
+        android:layout_width="275dp"
+        android:layout_height="86dp"
         android:layout_marginTop="76dp"
         android:layout_marginEnd="3dp"
         android:ems="10"
@@ -71,39 +71,26 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
 
+
     <Button
         android:id="@+id/Enter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="19dp"
+        android:backgroundTint="#FFE0E0"
         android:onClick="onClickGo22"
         android:text="Enter"
-        android:backgroundTint="#FFE0E0"
-        app:layout_constraintBottom_toTopOf="@+id/tvFrogotPassword"
-        app:layout_constraintEnd_toEndOf="@+id/tvFrogotPassword"
         android:textColor="#000"
 
-        tools:ignore="MissingConstraints" />
-
-
-    <TextView
-        android:id="@+id/tvFrogotPassword"
-        android:layout_width="166dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="120dp"
-        android:text="Forgot your password?->"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.539"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="430dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/forgetyourpw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="171dp"
-        tools:layout_editor_absoluteY="416dp" />
+        android:text="Forgot your password?"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="108dp"
+        tools:layout_editor_absoluteY="550dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
