--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -25,23 +25,23 @@
 
     <EditText
         android:id="@+id/edUsername2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="290dp"
+        android:layout_height="74dp"
         android:layout_marginEnd="7dp"
         android:layout_marginBottom="34dp"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/Pw"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Un"
+        app:layout_constraintStart_toEndOf="@+id/UserName"
         app:layout_constraintTop_toBottomOf="@+id/WB"
         tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/edPassW"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_width="295dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="7dp"
         android:ems="10"
         android:inputType="textPassword"
@@ -51,7 +51,7 @@
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/Un"
+        android:id="@+id/UserName"
         android:layout_width="93dp"
         android:layout_height="33dp"
         android:layout_marginStart="10dp"
@@ -80,27 +80,27 @@
         app:layout_constraintTop_toBottomOf="@+id/edUsername2"
         tools:ignore="MissingConstraints" />
 
+
     <Button
         android:id="@+id/SignUp"
         android:layout_width="148dp"
         android:layout_height="49dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="32dp"
         android:layout_marginBottom="71dp"
+        android:backgroundTint="#FFE0E0"
         android:onClick="onClickGo2"
         android:text="Sign Up"
+        android:textColor="#000"
         android:textColorLink="#E2A5BA"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/Pw"
         app:layout_constraintTop_toBottomOf="@+id/Pw"
-        android:backgroundTint="#FFE0E0"
-        android:textColor="#000"
         tools:ignore="MissingConstraints" />
-
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="190dp"
-        android:layout_height="26dp"
+        android:layout_width="200dp"
+        android:layout_height="43dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="58dp"
         android:layout_marginBottom="317dp"
@@ -114,17 +114,17 @@
 
     <Button
         android:id="@+id/signIn"
-        android:layout_width="122dp"
-        android:layout_height="46dp"
+        android:layout_width="157dp"
+        android:layout_height="52dp"
         android:layout_marginEnd="47dp"
+        android:backgroundTint="#FFE0E0"
         android:onClick="onClickGo"
         android:text="Sign In"
+        android:textColor="#000"
         android:textColorLink="#E99BB5"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        android:textColor="#000"
-        android:backgroundTint="#FFE0E0"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
